k8s/service.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-node
spec:
  containers:
  - name: hello-node
    image: registry.k8s.io/e2e-test-images/agnhost:2.39
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-node-svc
spec:
  selector:
    app.kubernetes.io/name: HelloNode
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
